--- a/languages/en.json
+++ b/languages/en.json
@@ -9,7 +9,7 @@
         "about": {
             "titlex": "About <span>Me</span>",
             "subTitle": "Analyst Cibersecurity Jr",
-            "textoDescrip": "Hello!👋 my name is Lucas, a passionate about technology<br>with a solid background in the field of cybersecurity and network analysis.<br>I'm from Argentina, country of mate and Leo Messi:)<br><samp class='hidden-text'>Throughout my career, I have developed a deep understanding<br>of digital threats and innovative solutions.<br>In my spare time, I enjoy participating in hackathons<br>and contributing to open source projects.<br>¡Thanks for visiting my website! Feel free to contact me if<br>you have any questions or would like to collaborate on a project.<br></samp><button class='read-more'  id='hide_text_Btn'>Read More</button>"
+            "textoDescrip": "Hello!👋 my name is Lucas, a passionate about technology<br>with a solid background in the field of cybersecurity and network analysis.<br>I'm from Argentina, country of mate and Leo Messi:)<br><samp class='hidden-text'>Throughout my career, I have developed a deep understanding<br>of digital threats and innovative solutions.<br>In my spare time, I enjoy participating in hackathons<br>and contributing to open source projects.<br>¡Thanks for visiting my website! Feel free to contact me if<br>you have any questions or would like to collaborate on a project.<br>"
             
         },
         "escuela":{
