--- a/languages/es.json
+++ b/languages/es.json
@@ -9,7 +9,7 @@
     "about": {
         "titlex": "Sobre <span>Mi</span>",
         "subTitle": "Analista de Ciberseguridad Junior",
-        "textoDescrip": "Hola!👋 mi nombre es Lucas, un apasionado de la tecnología <br>con una sólida formación en el campo de la<br> ciberseguridad y el análisis de redes.<br>Soy de Argentina, tierra del mate y de Leo Messi:)<br><samp class='hidden-text'>A lo largo de mi carrera, he desarrollado una profunda comprensión<br>de las amenazas digitales y soluciones innovadoras.<br> En mi tiempo libre, disfruto de participar en hackathons <br>y contribuir a proyectos de código abierto<br>¡Gracias por visitar mi sitio web!<br>No dudes en ponerte en contacto conmigo<br>si tienes alguna pregunta o deseas<br>que colaboraremos en un proyecto.<br></samp><button class='read-more'  id='hide_text_Btn'>Leer Mas</button>"
+        "textoDescrip": "Hola!👋 mi nombre es Lucas, un apasionado de la tecnología <br>con una sólida formación en el campo de la<br> ciberseguridad y el análisis de redes.<br>Soy de Argentina, tierra del mate y de Leo Messi:)<br><samp class='hidden-text'>A lo largo de mi carrera, he desarrollado una profunda comprensión<br>de las amenazas digitales y soluciones innovadoras.<br> En mi tiempo libre, disfruto de participar en hackathons <br>y contribuir a proyectos de código abierto<br>¡Gracias por visitar mi sitio web!<br>No dudes en ponerte en contacto conmigo<br>si tienes alguna pregunta o deseas<br>que colaboraremos en un proyecto.<br></samp>"
         
     },
     "escuela":{
